--- a/admin/usuario/nuevo.html
+++ b/admin/usuario/nuevo.html
@@ -250,7 +250,7 @@
                                 </div>
 
                                 <hr class="w-100">
-                                <h4 class="card-title">Dirección de la entrega de los productos</h4>
+                                <h4 class="card-title">Dirección de entrega de los productos</h4>
                                 <p class="card-text">Ingrese direccion de forma detallada</p>
                                 <div class="row">
                                     
