--- a/ofertas.html
+++ b/ofertas.html
@@ -90,15 +90,17 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ofertas.html">Ofertas</a>
+                        <a class="nav-link active text-success" href="/ofertas.html"><strong>Ofertas</strong></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/blog.html">blog</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/contacto.html">Contacto</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="btn btn-success ms-5" href="/carrito.html"><strong><i class="bi bi-cart4"></i> Carrito <span class=""> <strong>$5.000</strong></span>
                         </strong></a>
