--- a/blog-items.html
+++ b/blog-items.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de Videojuegos</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
@@ -40,8 +42,51 @@
             color: #333;
             font-weight: bold;
         }
+
+
+        .card {
+            background-color: #f8f9fa;
+            border: none;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+        }
+
+        .card-title {
+            font-family: 'Roboto', sans-serif;
+            font-weight: bold;
+            color: #343a40;
+        }
+
+        .{
+            font-family: 'Roboto', sans-serif;
+            font-size: 1.1rem;
+            color: #6c757d;
+        }
+
+        .card-text {
+            font-family: 'Open Sans', sans-serif;
+            color: #495057;
+            line-height: 1.6;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+
+        .card-img-top {
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+        }
     </style>
 </head>
+
 <body>
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -79,9 +124,9 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active text-primary" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            <strong>Categorías</strong>
+                            Categorías
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/categorias.html">Acción</a></li>
@@ -96,7 +141,7 @@
                         <a class="nav-link" href="/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/blog.html">Blog</a>
+                        <a class="nav-link active" href="/blog.html"><strong>Blog</strong></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contacto.html">Contacto</a>
@@ -153,7 +198,8 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
                                     Categorías
                                 </button>
                             </h2>
@@ -177,124 +223,98 @@
                         </div>
                     </div>
                 </li>
+
                 <li class="list-group-item"><a href="#" class="link-none">Ofertas</a></li>
                 <li class="list-group-item"><a href="#" class="link-none">Historial</a></li>
             </ul>
         </div>
     </div>
 
-    <div class="container mt-5">
-        <ul class="nav justify-content-center">
-            <li class="nav-item mx-2">
-                <div class="nav-card p-3">
-                    <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 1</a>
-                </div>
-            </li>
-            <li class="nav-item mx-2">
-                <div class="nav-card p-3">
-                    <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 2</a>
-                </div>
-            </li>
-            <li class="nav-item mx-2">
-                <div class="nav-card p-3">
-                    <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 3</a>
-                </div>
-            </li>
-                <li class="nav-item mx-2">
-                <div class="nav-card p-3">
-                    <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 4</a>
-                </div>
-            </li>
-        </ul>
-    </div>
+    <div class="container my-5">    
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/blog.html">Blogs</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Historia de RetroGaming Haven</li>
+                    </ol>
+                </nav>
+            </div>
+            <div class="col-md-8">
+                <div class="card">
+                    <img src="/assets/img/banner.png" class="card-img-top" alt="Videojuegos Retro">
+                    <div class="card-body">
+                        <h4 class="card-title text-center mb-3">🎮 Historia de RetroGaming Haven</h4>
+                        <h4 class="mb-2 text-muted">Un Viaje al Pasado 🚀</h4>
+                        <p class="card-text">
+                            RetroGaming Haven nació en el año 2010, en un pequeño local del centro de la ciudad, fundado por dos amigos apasionados por los videojuegos de su infancia. Con un sueño compartido de revivir la emoción de las consolas y juegos clásicos, comenzaron a coleccionar, restaurar y vender videojuegos y consolas retro.
+                        </p>
+                        <h4 class="mb-2 text-muted">Crecimiento y Comunidad 🌟</h4>
+                        <p class="card-text">
+                            Con el tiempo, RetroGaming Haven se ganó la reputación de ser un santuario para los amantes de los videojuegos clásicos. Organizamos eventos temáticos y torneos que reúnen a jugadores de todas las edades para compartir su amor por los juegos de antaño. Nuestra comunidad creció rápidamente, y en 2015, inauguramos nuestra tienda en línea, permitiendo que los aficionados de todo el mundo accedan a nuestro catálogo de tesoros retro.
+                        </p>
+                        <h4 class="mb-2 text-muted">🎯 Misión</h4>
+                        <p class="card-text">
+                            Nuestra misión es preservar y celebrar la rica historia de los videojuegos, ofreciendo una experiencia única y nostálgica a nuestros clientes. Nos esforzamos por ser un puente entre generaciones, proporcionando productos de calidad y servicios excepcionales a los coleccionistas y entusiastas del gaming clásico.
+                        </p>
+                        <h4 class="mb-2 text-muted">🔮 Visión</h4>
+                        <p class="card-text">
+                            En RetroGaming Haven, soñamos con ser líderes mundiales en el mercado de videojuegos retro, comprometidos con la innovación y la expansión de nuestra comunidad global. Buscamos ser el destino predilecto para quienes desean revivir y compartir los momentos dorados del pasado del gaming.
+                        </p>
+                        <h4 class="mb-2 text-muted">🚀 Innovación Continua</h4>
+                        <p class="card-text">
+                            A lo largo de los años, hemos ampliado nuestra oferta para incluir servicios de reparación y restauración de consolas, así como una línea exclusiva de merchandising inspirado en los clásicos del videojuego. En el futuro, planeamos lanzar una serie de documentales que exploren la evolución de los videojuegos y su impacto en la cultura popular.
+                        </p>
+                        
 
-    <!-- Productos -->
-    <section id="productos" class="py-5 ">
-        <div class="container">
-            <h2 class="mb-4">Categoría 1</h2>
-            <!-- PRODUCTOS MODELO 3 -->
-            <div class="row row-cols-2 row-cols-md-4 g-4">
-                <!-- Producto card diseño 1 -->
-                <div class="col">
-                    <div class="card card-producto" onclick="window.location='/productos/producto1.html'">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Producto 3">
-                        <div class="card-body">
-                            <a href="" class="link-none">
-                                <p class="card-title">Producto 3</p>
-                            </a>
-                            <div class="d-flex flex-column mb-3">
-                                <span class="precio-descuento text-decoration-line-through">$ 10.000</span>
-                                <span class="precio-nuevo fw-bolder">$ 7.999</span>
-                            </div>
-                            <!-- <div class="d-grid">
-                                <button class="btn btn-primary" type="button">Ver</button>
-                            </div> -->
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card card-producto" onclick="window.location='/productos/producto1.html'">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Producto 3">
-                        <div class="card-body">
-                            <a href="" class="link-none">
-                                <p class="card-title">Producto 3</p>
-                            </a>
-                            <div class="d-flex flex-column mb-3">
-                                <span class="precio-descuento text-decoration-line-through">$ 10.000</span>
-                                <span class="precio-nuevo fw-bolder">$ 7.999</span>
-                            </div>
-                            <!-- <div class="d-grid">
-                                <button class="btn btn-primary" type="button">Ver</button>
-                            </div> -->
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card card-producto">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Producto 3">
-                        <div class="card-body">
-                            <a href="" class="link-none">
-                                <p class="card-title">Producto 3</p>
-                            </a>
-                            <div class="d-flex flex-column mb-3">
-                                <span class="precio-descuento text-decoration-line-through">$ 10.000</span>
-                                <span class="precio-nuevo fw-bolder">$ 7.999</span>
-                            </div>
-                            <div class="d-grid">
-                                <a class="btn btn-dark" href="/productos/producto1.html">Ver</a>
+                        <div class="text-center">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <img src="/assets/img/face-programador2.png" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="">
+                                    <h2 class="fw-normal">Joseph</h2>
+                                    <small><strong>Programador</strong></small>
+                                    <p>Estudiante de segundo año de analista en Duoc UC.</p>
+
+                                    <!-- añadir perfiles de redes sociales -->
+                                    <div class="d-flex justify-content-center">
+                                        <a href="https://github.com/pedrohacker20" class="btn btn-dark btn-sm"><i class="bi bi-github"></i></a>
+                                        <a href="https://www.linkedin.com/feed/" class="btn btn-dark btn-sm mx-2"><i class="bi bi-linkedin"></i></a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <img src="/assets/img/Luna.png" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="">
+                                    <h2 class="fw-normal">Luna </h2>
+                                    <small><strong>Scrum Master</strong></small>
+                                    <p>Estudiante de Ingeniería en Informática, TechLead y Junior Frontend.</p>
+                                    <div class="d-flex justify-content-center">
+                                        <a href="https://github.com/pedrohacker20" class="btn btn-dark btn-sm"><i class="bi bi-github"></i></a>
+                                        <a href="https://www.linkedin.com/feed/" class="btn btn-dark btn-sm mx-2"><i class="bi bi-linkedin"></i></a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <img src="/assets/img/pedro.png" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="">
+                                    <h2 class="fw-normal">Pedro</h2>
+                                    <small><strong>Programador</strong></small>
+                                    <p>Estudiante de informática Duoc UC 🎮 Me gusta programar.</p>
+                                    <div class="d-flex justify-content-center">
+                                        <a href="https://github.com/pedrohacker20" class="btn btn-dark btn-sm"><i class="bi bi-github"></i></a>
+                                        <a href="https://www.linkedin.com/feed/" class="btn btn-dark btn-sm mx-2"><i class="bi bi-linkedin"></i></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card card-producto">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Producto 3">
-                        <div class="card-body">
-                            <a href="" class="link-none">
-                                <p class="card-title">Producto 3</p>
-                            </a>
-                            <div class="d-flex flex-column mb-3">
-                                <span class="precio-descuento text-decoration-line-through">$ 10.000</span>
-                                <span class="precio-nuevo fw-bolder">$ 7.999</span>
-                            </div>
-                            <div class="d-grid">
-                                <a class="btn btn-primary" href="/productos/producto1.html">Ver</a>
-                            </div>
-                        </div>
-                    </div>
+                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
