--- a/blog.html
+++ b/blog.html
@@ -1,47 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de Videojuegos</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
+    <link href="/assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-
-    <style>
-        body {
-            background: #f3f3f3;
-        }
-
-        .nav-card {
-            background: white;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            transition: transform 0.2s;
-            padding: 15px;
-            cursor: pointer;
-        }
-
-        .nav-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .nav-card i {
-            font-size: 24px;
-            color: #007bff;
-        }
-
-        .nav-card a {
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -58,17 +29,13 @@
             <div class="d-flex">
                 <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
                 <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <button class="btn btn-primary d-lg-none ms-2" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasMobileMenu" aria-controls="offcanvasMobileMenu">
+                    <span class="navbar-toggler-icon text-white"></span>
+                </button>
             </div>
         </div>
     </nav>
-
-    <div class="text-center">
-        <!-- Botón de menú móvil (solo visible en pantallas pequeñas) -->
-        <button class="btn btn-primary d-lg-none" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasMobileMenu" aria-controls="offcanvasMobileMenu">
-            <span class="navbar-toggler-icon"></span> Menú
-        </button>
-    </div>
 
     <!-- Navbar Inferior (solo visible en pantallas grandes) -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary d-none d-lg-block">
@@ -79,9 +46,9 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active text-primary" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            <strong>Categorías</strong>
+                            Categorías
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/categorias.html">Acción</a></li>
@@ -96,7 +63,7 @@
                         <a class="nav-link" href="/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/blog.html">Blog</a>
+                        <a class="nav-link active" href="/blog.html"><strong>Blog</strong></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contacto.html">Contacto</a>
@@ -183,107 +150,38 @@
         </div>
     </div>
 
-    <div class="container mt-5">
-        <ul class="nav justify-content-center">
-            <li class="nav-item mx-2">
-                <div class="nav-card p-3">
-                    <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 1</a>
-                </div>
-            </li>
-            <li class="nav-item mx-2">
-                <div class="nav-card p-3">
-                    <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 2</a>
-                </div>
-            </li>
-            <li class="nav-item mx-2">
-                <div class="nav-card p-3">
-                    <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 3</a>
-                </div>
-            </li>
-                <li class="nav-item mx-2">
-                <div class="nav-card p-3">
-                    <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 4</a>
-                </div>
-            </li>
-        </ul>
-    </div>
-
-    <!-- Productos -->
-    <section id="productos" class="py-5 ">
+    <!-- Blogs -->
+    <section id="categorias" class="py-5">
         <div class="container">
-            <h2 class="mb-4">Categoría 1</h2>
-            <!-- PRODUCTOS MODELO 3 -->
-            <div class="row row-cols-2 row-cols-md-4 g-4">
-                <!-- Producto card diseño 1 -->
-                <div class="col">
-                    <div class="card card-producto" onclick="window.location='/productos/producto1.html'">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Producto 3">
+            <h2 class="mb-4">Blogs</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Acción">
                         <div class="card-body">
-                            <a href="" class="link-none">
-                                <p class="card-title">Producto 3</p>
-                            </a>
-                            <div class="d-flex flex-column mb-3">
-                                <span class="precio-descuento text-decoration-line-through">$ 10.000</span>
-                                <span class="precio-nuevo fw-bolder">$ 7.999</span>
-                            </div>
-                            <!-- <div class="d-grid">
-                                <button class="btn btn-primary" type="button">Ver</button>
-                            </div> -->
+                            <h5 class="card-title">Acción</h5>
+                            <p class="card-text">Juegos llenos de adrenalina y emoción.</p>
+                            <a href="/blog-items.html" class="btn btn-primary">Explorar</a>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card card-producto" onclick="window.location='/productos/producto1.html'">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Producto 3">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Aventura">
                         <div class="card-body">
-                            <a href="" class="link-none">
-                                <p class="card-title">Producto 3</p>
-                            </a>
-                            <div class="d-flex flex-column mb-3">
-                                <span class="precio-descuento text-decoration-line-through">$ 10.000</span>
-                                <span class="precio-nuevo fw-bolder">$ 7.999</span>
-                            </div>
-                            <!-- <div class="d-grid">
-                                <button class="btn btn-primary" type="button">Ver</button>
-                            </div> -->
+                            <h5 class="card-title">Aventura</h5>
+                            <p class="card-text">Explora mundos fascinantes y vive historias épicas.</p>
+                            <a href="/blog-items.html" class="btn btn-primary">Explorar</a>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card card-producto">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Producto 3">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Estrategia">
                         <div class="card-body">
-                            <a href="" class="link-none">
-                                <p class="card-title">Producto 3</p>
-                            </a>
-                            <div class="d-flex flex-column mb-3">
-                                <span class="precio-descuento text-decoration-line-through">$ 10.000</span>
-                                <span class="precio-nuevo fw-bolder">$ 7.999</span>
-                            </div>
-                            <div class="d-grid">
-                                <a class="btn btn-dark" href="/productos/producto1.html">Ver</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card card-producto">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Producto 3">
-                        <div class="card-body">
-                            <a href="" class="link-none">
-                                <p class="card-title">Producto 3</p>
-                            </a>
-                            <div class="d-flex flex-column mb-3">
-                                <span class="precio-descuento text-decoration-line-through">$ 10.000</span>
-                                <span class="precio-nuevo fw-bolder">$ 7.999</span>
-                            </div>
-                            <div class="d-grid">
-                                <a class="btn btn-primary" href="/productos/producto1.html">Ver</a>
-                            </div>
+                            <h5 class="card-title">Estrategia</h5>
+                            <p class="card-text">Desafía tu mente con estos juegos estratégicos.</p>
+                            <a href="/blog-items.html" class="btn btn-primary">Explorar</a>
                         </div>
                     </div>
                 </div>
@@ -291,10 +189,27 @@
         </div>
     </section>
 
+
+    <!-- Footer -->
+    <footer class="bg-dark text-light text-center py-3">
+        <!-- Mapa responsivo -->
+        <div class="container-fluid">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d795.8652023171296!2d-70.6151711566251!3d-33.4328796238235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c586497835ad%3A0xa929ba68e1ac6051!2sDuoc%20UC%20Casa%20Central!5e1!3m2!1ses!2scl!4v1722850059541!5m2!1ses!2scl" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        <p>&copy; 2030 Tienda de Videojuegos</p>
+    </footer>
+
+
     <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script> -->
+    
+    <script src="/assets/jquery-3.6.0.min.js"></script>
+    <script src="/assets/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="/assets/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
