--- a/carrito.html
+++ b/carrito.html
@@ -69,6 +69,9 @@
                         <a class="nav-link" href="/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/contacto.html">Contacto</a>
                     </li>
 
