--- a/contacto.html
+++ b/contacto.html
@@ -96,6 +96,9 @@
                         <a class="nav-link" href="/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active text-danger" href="/contacto.html"><strong>Contacto</strong></a>
                     </li>
 
