--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarBottomContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link active" href="/"><strong>Home</strong></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -61,6 +61,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contacto.html">Contacto</a>
