--- a/carrito.html
+++ b/carrito.html
@@ -165,8 +165,8 @@
             <div class="alert alert-primary alert-dismissible fade show" role="alert">
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 
-                <strong>¡Vista Carrito de compra!</strong> Esta vista fue diseñada para aprender demostrar la
-                implementación mediante JS el carrito de compra.
+                <strong>¡Vista Carrito de compra!</strong> Esta vista fue diseñada para aprender y demostrar la
+                implementación mediante JS del carrito de compra.
 
                 <div class="btn-group dropup">
                     <button type="button" class="btn btn-secondary">Vistas</button>
