--- a/nosotros.html
+++ b/nosotros.html
@@ -57,7 +57,7 @@
             color: #343a40;
         }
 
-        .card-subtitle {
+        .{
             font-family: 'Roboto', sans-serif;
             font-size: 1.1rem;
             color: #6c757d;
@@ -230,50 +230,34 @@
         </div>
     </div>
 
-    <div class="container my-5">
+    <div class="container my-5">    
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card">
-                    <img src="https://example.com/retro-gaming.jpg" class="card-img-top" alt="Videojuegos Retro">
+                    <img src="/assets/img/banner2.png" class="card-img-top" alt="Videojuegos Retro">
                     <div class="card-body">
-                        <h5 class="card-title">Historia de RetroGaming Haven</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Un Viaje al Pasado</h6>
+                        <h4 class="card-title text-center mb-3">🎮 Historia de RetroGaming Haven</h4>
+                        <h4 class="mb-2 text-muted">Un Viaje al Pasado 🚀</h4>
                         <p class="card-text">
-                            RetroGaming Haven nació en el año 2010, en un pequeño local del centro de la ciudad, fundado
-                            por dos amigos apasionados por los videojuegos de su infancia. Con un sueño compartido de
-                            revivir la emoción de las consolas y juegos clásicos, comenzaron a coleccionar, restaurar y
-                            vender videojuegos y consolas retro.
+                            RetroGaming Haven nació en el año 2010, en un pequeño local del centro de la ciudad, fundado por dos amigos apasionados por los videojuegos de su infancia. Con un sueño compartido de revivir la emoción de las consolas y juegos clásicos, comenzaron a coleccionar, restaurar y vender videojuegos y consolas retro.
                         </p>
-                        <h6 class="card-subtitle mb-2 text-muted">Crecimiento y Comunidad</h6>
+                        <h4 class="mb-2 text-muted">Crecimiento y Comunidad 🌟</h4>
                         <p class="card-text">
-                            Con el tiempo, RetroGaming Haven se ganó la reputación de ser un santuario para los amantes
-                            de los videojuegos clásicos. Organizamos eventos temáticos y torneos que reúnen a jugadores
-                            de todas las edades para compartir su amor por los juegos de antaño. Nuestra comunidad
-                            creció rápidamente, y en 2015, inauguramos nuestra tienda en línea, permitiendo que los
-                            aficionados de todo el mundo accedan a nuestro catálogo de tesoros retro.
+                            Con el tiempo, RetroGaming Haven se ganó la reputación de ser un santuario para los amantes de los videojuegos clásicos. Organizamos eventos temáticos y torneos que reúnen a jugadores de todas las edades para compartir su amor por los juegos de antaño. Nuestra comunidad creció rápidamente, y en 2015, inauguramos nuestra tienda en línea, permitiendo que los aficionados de todo el mundo accedan a nuestro catálogo de tesoros retro.
                         </p>
-                        <h6 class="card-subtitle mb-2 text-muted">Misión</h6>
+                        <h4 class="mb-2 text-muted">🎯 Misión</h4>
                         <p class="card-text">
-                            Nuestra misión es preservar y celebrar la rica historia de los videojuegos, ofreciendo una
-                            experiencia única y nostálgica a nuestros clientes. Nos esforzamos por ser un puente entre
-                            generaciones, proporcionando productos de calidad y servicios excepcionales a los
-                            coleccionistas y entusiastas del gaming clásico.
+                            Nuestra misión es preservar y celebrar la rica historia de los videojuegos, ofreciendo una experiencia única y nostálgica a nuestros clientes. Nos esforzamos por ser un puente entre generaciones, proporcionando productos de calidad y servicios excepcionales a los coleccionistas y entusiastas del gaming clásico.
                         </p>
-                        <h6 class="card-subtitle mb-2 text-muted">Visión</h6>
+                        <h4 class="mb-2 text-muted">🔮 Visión</h4>
                         <p class="card-text">
-                            En RetroGaming Haven, soñamos con ser líderes mundiales en el mercado de videojuegos retro,
-                            comprometidos con la innovación y la expansión de nuestra comunidad global. Buscamos ser el
-                            destino predilecto para quienes desean revivir y compartir los momentos dorados del pasado
-                            del gaming.
+                            En RetroGaming Haven, soñamos con ser líderes mundiales en el mercado de videojuegos retro, comprometidos con la innovación y la expansión de nuestra comunidad global. Buscamos ser el destino predilecto para quienes desean revivir y compartir los momentos dorados del pasado del gaming.
                         </p>
-                        <h6 class="card-subtitle mb-2 text-muted">Innovación Continua</h6>
+                        <h4 class="mb-2 text-muted">🚀 Innovación Continua</h4>
                         <p class="card-text">
-                            A lo largo de los años, hemos ampliado nuestra oferta para incluir servicios de reparación y
-                            restauración de consolas, así como una línea exclusiva de merchandising inspirado en los
-                            clásicos del videojuego. En el futuro, planeamos lanzar una serie de documentales que
-                            exploren la evolución de los videojuegos y su impacto en la cultura popular.
+                            A lo largo de los años, hemos ampliado nuestra oferta para incluir servicios de reparación y restauración de consolas, así como una línea exclusiva de merchandising inspirado en los clásicos del videojuego. En el futuro, planeamos lanzar una serie de documentales que exploren la evolución de los videojuegos y su impacto en la cultura popular.
                         </p>
-
+                        
 
                         <div class="text-center">
                             <div class="row">
