--- a/admin/index.html
+++ b/admin/index.html
@@ -67,6 +67,21 @@
         .card-warning {
             background-color: #ffc107; /* Bootstrap warning color */
         }
+
+        .card-icon {
+            font-size: 2rem;
+            color: #007bff;
+        }
+
+        
+        .card-item {
+            transition: box-shadow 0.3s ease; /* Suaviza la transición de la sombra */
+        }
+        .card-item:hover {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra al pasar el mouse */
+            cursor: pointer;
+        }
+
     </style>
 </head>
 
@@ -140,7 +155,6 @@
                                     Reportes
                                 </a>
                             </li>
-                         
                         </ul>
 
                         <hr class="my-3">
@@ -184,7 +198,7 @@
             <!-- contenido interno -->
             <!-- ***************** -->
 
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 mb-3">
                 <div class="mt-4">
                     <h4 class="card-title">Dashboard</h4>
                     <p class="card-text">Resumen de las actividades diarias</p>
@@ -242,11 +256,87 @@
                         </div>
                     </div>
 
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class=" mt-3">
+                        <div class="row row-cols-2 row-cols-md-4 g-4">
+                            <!-- Dashboard Card -->
+                            <div class="col">
+                                <div class="card h-100 card-item">
+                                    <div class="card-body text-center">
+                                        <i class="bi bi-speedometer2 card-icon"></i>
+                                        <h5 class="card-title mt-3">Dashboard</h5>
+                                        <p class="card-text">Visión general de todas las métricas y estadísticas clave del sistema.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Ordenes Card -->
+                            <div class="col">
+                                <div class="card h-100 card-item">
+                                    <div class="card-body text-center">
+                                        <i class="bi bi-cart-check card-icon"></i>
+                                        <h5 class="card-title mt-3">Órdenes</h5>
+                                        <p class="card-text">Gestión y seguimiento de todas las órdenes de compra realizadas.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Productos Card -->
+                            <div class="col">
+                                <div class="card h-100 card-item">
+                                    <div class="card-body text-center">
+                                        <i class="bi bi-box-seam card-icon"></i>
+                                        <h5 class="card-title mt-3">Productos</h5>
+                                        <p class="card-text">Administrar inventario y detalles de los productos disponibles.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Categorías Card -->
+                            <div class="col">
+                                <div class="card h-100 card-item">
+                                    <div class="card-body text-center">
+                                        <i class="bi bi-tags card-icon"></i>
+                                        <h5 class="card-title mt-3">Categorías</h5>
+                                        <p class="card-text">Organizar productos en categorías para facilitar su navegación.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Usuarios Card -->
+                            <div class="col">
+                                <div class="card h-100 card-item">
+                                    <div class="card-body text-center">
+                                        <i class="bi bi-people card-icon"></i>
+                                        <h5 class="card-title mt-3">Usuarios</h5>
+                                        <p class="card-text">Gestión de cuentas de usuario y sus roles dentro del sistema.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Reportes Card -->
+                            <div class="col">
+                                <div class="card h-100 card-item">
+                                    <div class="card-body text-center">
+                                        <i class="bi bi-bar-chart-line card-icon"></i>
+                                        <h5 class="card-title mt-3">Reportes</h5>
+                                        <p class="card-text">Generación de informes detallados sobre las operaciones del sistema.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Perfil Card -->
+                            <div class="col">
+                                <div class="card h-100 card-item">
+                                    <div class="card-body text-center">
+                                        <i class="bi bi-person card-icon"></i>
+                                        <h5 class="card-title mt-3">Perfil</h5>
+                                        <p class="card-text">Administración de la información personal y configuraciones de cuenta.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100 card-item">
+                                    <div class="card-body text-center">
+                                        <i class="bi bi-shop card-icon"></i>
+                                        <h5 class="card-title mt-3">Tienda</h5>
+                                        <p class="card-text">Visualiza tu tienda en tiempo real, visualiza los reportes de los usuarios.</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
