--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -25,7 +25,7 @@
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTopContent">
@@ -35,8 +35,8 @@
                 </form>
             </div>
             <div class="d-flex">
-                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
         </div>
     </nav>
@@ -65,8 +65,8 @@
                             <input type="password" class="form-control" id="password" required>
                         </div>
                         <div class="mb-3">
-                            <a href="/crear-sesion.html">¿No tienes cuenta? Regístrate aquí</a>
-                            <a href="/recuperar-contrasena.html" class="float-end">¿Olvidaste tu contraseña?</a>
+                            <a href="crear-sesion.html">¿No tienes cuenta? Regístrate aquí</a>
+                            <a href="recuperar-contrasena.html" class="float-end">¿Olvidaste tu contraseña?</a>
                         </div>
 
                         <button type="submit" class="btn btn-primary w-100"><strong>INICIAR SESIÓN</strong></button>
@@ -85,8 +85,8 @@
                 <div class="card-body">
                     <h5 class="card-title">Acceso directo</h5>
                     <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                    <a href="/cliente/index.html" class="btn btn-danger"><strong>ENTRAR COMO CLIENTE</strong></a>
-                    <a href="/admin/index.html" class="btn btn-dark"><strong>ENTRAR COMO ADMINISTRADOR</strong></a>
+                    <a href="cliente/index.html" class="btn btn-danger"><strong>ENTRAR COMO CLIENTE</strong></a>
+                    <a href="admin/index.html" class="btn btn-dark"><strong>ENTRAR COMO ADMINISTRADOR</strong></a>
                 </div>
             </div>
         </div>
