--- a/productos/producto1.html
+++ b/productos/producto1.html
@@ -49,8 +49,8 @@
     <div class="row">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Volver</a></li>
-                <li class="breadcrumb-item"><a href="/categorias.html">Categorías</a></li>
+                <li class="breadcrumb-item"><a href="">Volver</a></li>
+                <li class="breadcrumb-item"><a href="categorias.html">Categorías</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Acción</li>
             </ol>
         </nav>
