--- a/admin/categoria/index.html
+++ b/admin/categoria/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-    <link href="/assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="/assets/admin/dashboard.css" rel="stylesheet">
+    <link href="assets/admin/dashboard.css" rel="stylesheet">
 
     <style>
         a.nav-link.nav-menu.nav-active {
@@ -81,37 +81,37 @@
                     <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
                         <ul class="nav flex-column">
                             <li class="nav-item mx-2">
-                                <a href="/admin/index.html" class="nav-link nav-menu d-flex gap-2">
+                                <a href="admin/index.html" class="nav-link nav-menu d-flex gap-2">
                                     <i class="bi bi-house-fill"></i>
                                     Dashboard
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/ordenes/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/ordenes/index.html">
                                     <i class="bi bi-file-earmark"></i>
                                     Ordenes
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/producto/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/producto/index.html">
                                     <i class="bi bi-cart"></i>
                                     Productos
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2 nav-active" href="/admin/categoria/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2 nav-active" href="admin/categoria/index.html">
                                     <i class="bi bi-list-ul"></i>
                                     Categorías
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/usuario/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/usuario/index.html">
                                     <i class="bi bi-people"></i>
                                     Usuarios
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/reporte/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/reporte/index.html">
                                     <i class="bi bi-graph-up"></i>
                                     Reportes
                                 </a>
@@ -123,7 +123,7 @@
 
                         <ul class="nav flex-column mb-auto">
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/perfil/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/perfil/index.html">
                                     <i class="bi bi-person-circle"></i>
                                     Perfil
                                 </a>
@@ -135,13 +135,13 @@
 
                         <ul class="nav flex-column mb-auto">
                             <li class="nav-item mt-2 mx-2">
-                                <a class="mx-4 text-center d-flex gap-2 btn btn-dark" href="/">
+                                <a class="mx-4 text-center d-flex gap-2 btn btn-dark" href="">
                                     <i class="bi bi-shop"></i>
                                     <strong>Tienda</strong>
                                 </a>
                             </li>
                             <li class="nav-item mt-2 mx-2">
-                                <a class="mx-4 text-center d-flex gap-2 btn btn-danger" href="/iniciar-sesion.html">
+                                <a class="mx-4 text-center d-flex gap-2 btn btn-danger" href="iniciar-sesion.html">
                                     <i class="bi bi-door-closed"></i>
                                     Cerrar Sesión
                                 </a>
@@ -167,10 +167,10 @@
                     <!-- <h2>Section title</h2> -->
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link nav-menu active" aria-current="page" href="/admin/categoria">Listado de categorías</a>
+                            <a class="nav-link nav-menu active" aria-current="page" href="admin/categoria">Listado de categorías</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-menu" href="/admin/categoria/nuevo.html">Nueva categoría</a>
+                            <a class="nav-link nav-menu" href="admin/categoria/nuevo.html">Nueva categoría</a>
                         </li>
                     </ul>
                     <div class="card text-start">
@@ -190,28 +190,28 @@
                                         <tr>
                                             <th scope="row">1</th>
                                             <td><img src="https://via.placeholder.com/50" alt="Aventura" class="category-img"></td>
-                                            <td><a href="/admin/categoria/2000/index.html">Aventura</a></td>
+                                            <td><a href="admin/categoria/2000/index.html">Aventura</a></td>
                                             <td>Juegos de exploración y aventuras en mundos abiertos.</td>
                                             <td>150</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">2</th>
                                             <td><img src="https://via.placeholder.com/50" alt="Plataforma" class="category-img"></td>
-                                            <td><a href="/admin/categoria/2000/index.html">Plataforma</a></td>
+                                            <td><a href="admin/categoria/2000/index.html">Plataforma</a></td>
                                             <td>Juegos que desafían las habilidades de salto y carrera.</td>
                                             <td>90</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">3</th>
                                             <td><img src="https://via.placeholder.com/50" alt="RPG" class="category-img"></td>
-                                            <td><a href="/admin/categoria/2000">RPG</a></td>
+                                            <td><a href="admin/categoria/2000">RPG</a></td>
                                             <td>Juegos de rol con historias envolventes y personajes personalizables.</td>
                                             <td>200</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">4</th>
                                             <td><img src="https://via.placeholder.com/50" alt="Shooter" class="category-img"></td>
-                                            <td><a href="/admin/categoria/2000">Shooter</a></td>
+                                            <td><a href="admin/categoria/2000">Shooter</a></td>
                                             <td>Juegos de disparos en primera y tercera persona.</td>
                                             <td>120</td>
                                         </tr>
