--- a/admin/ordenes/index.html
+++ b/admin/ordenes/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-    <link href="/assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="/assets/admin/dashboard.css" rel="stylesheet">
+    <link href="assets/admin/dashboard.css" rel="stylesheet">
 
     <style>
         a.nav-link.nav-menu.nav-active {
@@ -81,37 +81,37 @@
                     <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
                         <ul class="nav flex-column">
                             <li class="nav-item mx-2">
-                                <a href="/admin/index.html" class="nav-link nav-menu d-flex gap-2">
+                                <a href="admin/index.html" class="nav-link nav-menu d-flex gap-2">
                                     <i class="bi bi-house-fill"></i>
                                     Dashboard
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2 nav-active" href="/admin/ordenes/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2 nav-active" href="admin/ordenes/index.html">
                                     <i class="bi bi-file-earmark"></i>
                                     Ordenes
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/producto/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/producto/index.html">
                                     <i class="bi bi-cart"></i>
                                     Productos
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/categoria/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/categoria/index.html">
                                     <i class="bi bi-list-ul"></i>
                                     Categorías
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/usuario/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/usuario/index.html">
                                     <i class="bi bi-people"></i>
                                     Usuarios
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/reporte/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/reporte/index.html">
                                     <i class="bi bi-graph-up"></i>
                                     Reportes
                                 </a>
@@ -123,7 +123,7 @@
 
                         <ul class="nav flex-column mb-auto">
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/perfil/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/perfil/index.html">
                                     <i class="bi bi-person-circle"></i>
                                     Perfil
                                 </a>
@@ -135,13 +135,13 @@
 
                         <ul class="nav flex-column mb-auto">
                             <li class="nav-item mt-2 mx-2">
-                                <a class="mx-4 text-center d-flex gap-2 btn btn-dark" href="/">
+                                <a class="mx-4 text-center d-flex gap-2 btn btn-dark" href="">
                                     <i class="bi bi-shop"></i>
                                     <strong>Tienda</strong>
                                 </a>
                             </li>
                             <li class="nav-item mt-2 mx-2">
-                                <a class="mx-4 text-center d-flex gap-2 btn btn-danger" href="/iniciar-sesion.html">
+                                <a class="mx-4 text-center d-flex gap-2 btn btn-danger" href="iniciar-sesion.html">
                                     <i class="bi bi-door-closed"></i>
                                     Cerrar Sesión
                                 </a>
@@ -166,10 +166,10 @@
                     <p class="card-text">Listado de todas las boletas emitidas.</p>
                     <!-- <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link nav-menu active" aria-current="page" href="/admin/producto/index.html">Ordenes</a>
+                            <a class="nav-link nav-menu active" aria-current="page" href="admin/producto/index.html">Ordenes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-menu" aria-current="page" href="/admin/producto/index-critico.html">Listado de productos criticos</a>
+                            <a class="nav-link nav-menu" aria-current="page" href="admin/producto/index-critico.html">Listado de productos criticos</a>
                         </li>
                     </ul> -->
                     <div class="card text-start">
@@ -190,92 +190,92 @@
                                         <!-- Orden de Compra 1 -->
                                         <tr>
                                             <td>#10001</td>
-                                            <td><a href="/admin/ordenes/10001/" class="">ORDER12345</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="">ORDER12345</a></td>
                                             <td>05/08/2024 14:30</td>
                                             <td>$15000</td>
                                             <td>Santiago Centro</td>
-                                            <td><a href="/admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
                                         </tr>
                                         <!-- Orden de Compra 2 -->
                                         <tr>
                                             <td>#10002</td>
-                                            <td><a href="/admin/ordenes/10001/" class="">ORDER67890</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="">ORDER67890</a></td>
                                             <td>06/08/2024 10:15</td>
                                             <td>$30000</td>
                                             <td>Las Condes</td>
-                                            <td><a href="/admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
                                         </tr>
                                         <!-- Orden de Compra 3 -->
                                         <tr>
                                             <td>#10003</td>
-                                            <td><a href="/admin/ordenes/10001/" class="">ORDER24680</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="">ORDER24680</a></td>
                                             <td>07/08/2024 09:00</td>
                                             <td>$12000</td>
                                             <td>Providencia</td>
-                                            <td><a href="/admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
                                         </tr>
                                         <!-- Orden de Compra 4 -->
                                         <tr>
                                             <td>#10004</td>
-                                            <td><a href="/admin/ordenes/10001/" class="">ORDER13579</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="">ORDER13579</a></td>
                                             <td>08/08/2024 15:45</td>
                                             <td>$20000</td>
                                             <td>Ñuñoa</td>
-                                            <td><a href="/admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
                                         </tr>
                                         <!-- Orden de Compra 5 -->
                                         <tr>
                                             <td>#10005</td>
-                                            <td><a href="/admin/ordenes/10001/" class="">ORDER11223</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="">ORDER11223</a></td>
                                             <td>09/08/2024 11:20</td>
                                             <td>$18000</td>
                                             <td>La Florida</td>
-                                            <td><a href="/admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
                                         </tr>
                                         <!-- Orden de Compra 6 -->
                                         <tr>
                                             <td>#10006</td>
-                                            <td><a href="/admin/ordenes/10001/" class="">ORDER55678</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="">ORDER55678</a></td>
                                             <td>10/08/2024 16:50</td>
                                             <td>$25000</td>
                                             <td>Puente Alto</td>
-                                            <td><a href="/admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
                                         </tr>
                                         <!-- Orden de Compra 7 -->
                                         <tr>
                                             <td>#10007</td>
-                                            <td><a href="/admin/ordenes/10001/" class="">ORDER99887</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="">ORDER99887</a></td>
                                             <td>11/08/2024 13:35</td>
                                             <td>$32000</td>
                                             <td>Maipú</td>
-                                            <td><a href="/admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
                                         </tr>
                                         <!-- Orden de Compra 8 -->
                                         <tr>
                                             <td>#10008</td>
-                                            <td><a href="/admin/ordenes/10001/" class="">ORDER44556</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="">ORDER44556</a></td>
                                             <td>12/08/2024 17:45</td>
                                             <td>$23000</td>
                                             <td>Peñalolén</td>
-                                            <td><a href="/admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
                                         </tr>
                                         <!-- Orden de Compra 9 -->
                                         <tr>
                                             <td>#10009</td>
-                                            <td><a href="/admin/ordenes/10001/" class="">ORDER66789</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="">ORDER66789</a></td>
                                             <td>13/08/2024 12:10</td>
                                             <td>$40000</td>
                                             <td>Vitacura</td>
-                                            <td><a href="/admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
                                         </tr>
                                         <!-- Orden de Compra 10 -->
                                         <tr>
                                             <td>#10010</td>
-                                            <td><a href="/admin/ordenes/10001/" class="">ORDER33445</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="">ORDER33445</a></td>
                                             <td>14/08/2024 09:50</td>
                                             <td>$28000</td>
                                             <td>Independencia</td>
-                                            <td><a href="/admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
+                                            <td><a href="admin/ordenes/10001/" class="btn btn-primary btn-sm">DETALLES</a></td>
                                         </tr>
                                     </tbody>
                                 </table>
