--- a/admin/producto/index-formato.html
+++ b/admin/producto/index-formato.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-    <link href="/assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="/assets/admin/dashboard.css" rel="stylesheet">
+    <link href="assets/admin/dashboard.css" rel="stylesheet">
 
     <style>
         a.nav-link.nav-menu.nav-active {
@@ -98,37 +98,37 @@
                     <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
                         <ul class="nav flex-column">
                             <li class="nav-item mx-2">
-                                <a href="/admin/index.html" class="nav-link nav-menu d-flex gap-2">
+                                <a href="admin/index.html" class="nav-link nav-menu d-flex gap-2">
                                     <i class="bi bi-house-fill"></i>
                                     Dashboard
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/ordenes/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/ordenes/index.html">
                                     <i class="bi bi-file-earmark"></i>
                                     Ordenes
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2 nav-active" href="/admin/producto/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2 nav-active" href="admin/producto/index.html">
                                     <i class="bi bi-cart"></i>
                                     Productos
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/categoria/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/categoria/index.html">
                                     <i class="bi bi-list-ul"></i>
                                     Categorías
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/usuario/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/usuario/index.html">
                                     <i class="bi bi-people"></i>
                                     Usuarios
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/reporte/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/reporte/index.html">
                                     <i class="bi bi-graph-up"></i>
                                     Reportes
                                 </a>
@@ -140,7 +140,7 @@
 
                         <ul class="nav flex-column mb-auto">
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/perfil/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="admin/perfil/index.html">
                                     <i class="bi bi-person-circle"></i>
                                     Perfil
                                 </a>
@@ -152,13 +152,13 @@
 
                         <ul class="nav flex-column mb-auto">
                             <li class="nav-item mt-2 mx-2">
-                                <a class="mx-4 text-center d-flex gap-2 btn btn-dark" href="/">
+                                <a class="mx-4 text-center d-flex gap-2 btn btn-dark" href="">
                                     <i class="bi bi-shop"></i>
                                     <strong>Tienda</strong>
                                 </a>
                             </li>
                             <li class="nav-item mt-2 mx-2">
-                                <a class="mx-4 text-center d-flex gap-2 btn btn-danger" href="/iniciar-sesion.html">
+                                <a class="mx-4 text-center d-flex gap-2 btn btn-danger" href="iniciar-sesion.html">
                                     <i class="bi bi-door-closed"></i>
                                     Cerrar Sesión
                                 </a>
@@ -183,19 +183,19 @@
                     <p class="card-text">Listado de productos</p>
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link nav-menu" aria-current="page" href="/admin/producto/index.html">Listado de productos</a>
+                            <a class="nav-link nav-menu" aria-current="page" href="admin/producto/index.html">Listado de productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-menu" aria-current="page" href="/admin/producto/index-critico.html">Listado de productos criticos</a>
+                            <a class="nav-link nav-menu" aria-current="page" href="admin/producto/index-critico.html">Listado de productos criticos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-menu active" aria-current="page" href="/admin/producto/index-formato.html">Formato tarjeta</a>
+                            <a class="nav-link nav-menu active" aria-current="page" href="admin/producto/index-formato.html">Formato tarjeta</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-menu" aria-current="page" href="/admin/producto/reporte.html">Reportes</a>
+                            <a class="nav-link nav-menu" aria-current="page" href="admin/producto/reporte.html">Reportes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-menu" href="/admin/producto/nuevo.html">Nuevo producto</a>
+                            <a class="nav-link nav-menu" href="admin/producto/nuevo.html">Nuevo producto</a>
                         </li>
                     </ul>
 
