--- a/blog-items.html
+++ b/blog-items.html
@@ -91,7 +91,7 @@
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTopContent">
@@ -101,8 +101,8 @@
                 </form>
             </div>
             <div class="d-flex">
-                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
         </div>
     </nav>
@@ -121,7 +121,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarBottomContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
@@ -129,26 +129,26 @@
                             Categorías
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/categorias.html">Acción</a></li>
-                            <li><a class="dropdown-item" href="/categorias.html">Aventura</a></li>
-                            <li><a class="dropdown-item" href="/categorias.html">Estrategia</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Acción</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Aventura</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Estrategia</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/ofertas.html">Ofertas</a>
+                        <a class="nav-link" href="ofertas.html">Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/blog.html"><strong>Blog</strong></a>
+                        <a class="nav-link active" href="blog.html"><strong>Blog</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contacto.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="btn btn-success ms-5" href="/carrito.html"><strong><i class="bi bi-cart4"></i> Carrito <span class=""> <strong>$5.000</strong></span>
+                        <a class="btn btn-success ms-5" href="carrito.html"><strong><i class="bi bi-cart4"></i> Carrito <span class=""> <strong>$5.000</strong></span>
                         </strong></a>
                     </li>
                 </ul>
@@ -187,8 +187,8 @@
             </div>
 
             <div class="d-flex my-3">
-                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
 
 
@@ -235,7 +235,7 @@
             <div class="col-8">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="/blog.html">Blogs</a></li>
+                        <li class="breadcrumb-item"><a href="blog.html">Blogs</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Historia de RetroGaming Haven</li>
                     </ol>
                 </nav>
