--- a/carrito.html
+++ b/carrito.html
@@ -7,10 +7,10 @@
     <title>Tienda de Videojuegos</title>
     <!-- Bootstrap CSS -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-    <link href="/assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <style>
         body {
@@ -23,7 +23,7 @@
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTopContent">
@@ -33,8 +33,8 @@
                 </form>
             </div>
             <div class="d-flex">
-                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
                 <button class="btn btn-primary d-lg-none ms-2" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasMobileMenu" aria-controls="offcanvasMobileMenu">
                     <span class="navbar-toggler-icon text-white"></span>
@@ -49,7 +49,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarBottomContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -57,26 +57,26 @@
                             Categorías
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/categorias.html">Acción</a></li>
-                            <li><a class="dropdown-item" href="/categorias.html">Aventura</a></li>
-                            <li><a class="dropdown-item" href="/categorias.html">Estrategia</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Acción</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Aventura</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Estrategia</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/ofertas.html">Ofertas</a>
+                        <a class="nav-link" href="ofertas.html">Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contacto.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="btn btn-success ms-5" href="/carrito.html"><strong><i class="bi bi-cart4"></i> Carrito
+                        <a class="btn btn-success ms-5" href="carrito.html"><strong><i class="bi bi-cart4"></i> Carrito
                                 <span class="">$<strong><span id="totalCompras"></span></strong></span>
                             </strong></a>
                     </li>
@@ -116,8 +116,8 @@
             </div>
 
             <div class="d-flex my-3">
-                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
 
 
