--- a/categorias.html
+++ b/categorias.html
@@ -46,7 +46,7 @@
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTopContent">
@@ -56,8 +56,8 @@
                 </form>
             </div>
             <div class="d-flex">
-                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
         </div>
     </nav>
@@ -76,7 +76,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarBottomContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active text-primary" href="#" role="button" data-bs-toggle="dropdown"
@@ -84,26 +84,26 @@
                             <strong>Categorías</strong>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/categorias.html">Acción</a></li>
-                            <li><a class="dropdown-item" href="/categorias.html">Aventura</a></li>
-                            <li><a class="dropdown-item" href="/categorias.html">Estrategia</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Acción</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Aventura</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Estrategia</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/ofertas.html">Ofertas</a>
+                        <a class="nav-link" href="ofertas.html">Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contacto.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="btn btn-success ms-5" href="/carrito.html"><strong><i class="bi bi-cart4"></i> Carrito <span class=""> <strong>$5.000</strong></span>
+                        <a class="btn btn-success ms-5" href="carrito.html"><strong><i class="bi bi-cart4"></i> Carrito <span class=""> <strong>$5.000</strong></span>
                         </strong></a>
                     </li>
                 </ul>
@@ -142,8 +142,8 @@
             </div>
 
             <div class="d-flex my-3">
-                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
 
 
@@ -188,25 +188,25 @@
             <li class="nav-item mx-2">
                 <div class="nav-card p-3">
                     <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 1</a>
+                    <a class="nav-link disabled" href="categorias.html" aria-disabled="true">Categoría 1</a>
                 </div>
             </li>
             <li class="nav-item mx-2">
                 <div class="nav-card p-3">
                     <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 2</a>
+                    <a class="nav-link disabled" href="categorias.html" aria-disabled="true">Categoría 2</a>
                 </div>
             </li>
             <li class="nav-item mx-2">
                 <div class="nav-card p-3">
                     <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 3</a>
+                    <a class="nav-link disabled" href="categorias.html" aria-disabled="true">Categoría 3</a>
                 </div>
             </li>
                 <li class="nav-item mx-2">
                 <div class="nav-card p-3">
                     <img src="https://via.placeholder.com/100x100" width="100px" class="card-img-top" alt="Producto 3">
-                    <a class="nav-link disabled" href="/categorias.html" aria-disabled="true">Categoría 4</a>
+                    <a class="nav-link disabled" href="categorias.html" aria-disabled="true">Categoría 4</a>
                 </div>
             </li>
         </ul>
@@ -265,7 +265,7 @@
                                 <span class="precio-nuevo fw-bolder">$ 7.999</span>
                             </div>
                             <div class="d-grid">
-                                <a class="btn btn-dark" href="/productos/producto1.html">Ver</a>
+                                <a class="btn btn-dark" href="productos/producto1.html">Ver</a>
                             </div>
                         </div>
                     </div>
@@ -282,7 +282,7 @@
                                 <span class="precio-nuevo fw-bolder">$ 7.999</span>
                             </div>
                             <div class="d-grid">
-                                <a class="btn btn-primary" href="/productos/producto1.html">Ver</a>
+                                <a class="btn btn-primary" href="productos/producto1.html">Ver</a>
                             </div>
                         </div>
                     </div>
