--- a/comprar copy.html
+++ b/comprar copy.html
@@ -91,7 +91,7 @@
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTopContent">
@@ -101,8 +101,8 @@
                 </form>
             </div>
             <div class="d-flex">
-                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
         </div>
     </nav>
@@ -126,23 +126,23 @@
                             Categorías
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/categorias.html">Acción</a></li>
-                            <li><a class="dropdown-item" href="/categorias.html">Aventura</a></li>
-                            <li><a class="dropdown-item" href="/categorias.html">Estrategia</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Acción</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Aventura</a></li>
+                            <li><a class="dropdown-item" href="categorias.html">Estrategia</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/ofertas.html">Ofertas</a>
+                        <a class="nav-link" href="ofertas.html">Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contacto.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="btn btn-success ms-5" href="/carrito.html"><strong><i class="bi bi-cart4"></i> Carrito <span class=""> <strong>$5.000</strong></span>
+                        <a class="btn btn-success ms-5" href="carrito.html"><strong><i class="bi bi-cart4"></i> Carrito <span class=""> <strong>$5.000</strong></span>
                         </strong></a>
                     </li>
                 </ul>
@@ -181,8 +181,8 @@
             </div>
 
             <div class="d-flex my-3">
-                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
 
 
