--- a/crear-sesion.html
+++ b/crear-sesion.html
@@ -7,10 +7,10 @@
     <title>Detalle del Producto</title>
     <!-- Bootstrap CSS -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-    <link href="/assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
     <style>
@@ -30,7 +30,7 @@
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTopContent">
@@ -40,8 +40,8 @@
                 </form>
             </div>
             <div class="d-flex">
-                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
         </div>
     </nav>
